@@ -12,8 +12,6 @@ pyramid.includes =
 #sqlalchemy.url = sqlite:///%(here)s/stalker.db
 sqlalchemy.url = postgresql+psycopg2://stalker_admin:stalker@192.168.1.10:5432/stalker
 
-
-
 jinja2.directories = stalker:templates
 
 [server:main]
